# dotfiles

./: .gitignore  README.md  RectangleConfig.json  aliases.sh  cadentj.zsh-theme  codex.sh  config.ghostty  current.sh  download_data.sh  hammerspoon.init.lua  hotkeys.json  install.sh  lazy_nvm.sh  mac-aliases.sh  openrlhf_setup.sh  runpod.sh  setup_github.sh  setup_runpod.sh  tmux.md
poke-mcp/: .env  poke-sprites.md  poke.py  pyproject.toml
poke-mcp/codemcp/: access.py  file_utils.py  git.py  git_commit.py  git_query.py  main.py  mcp.py  testing.py
poke-mcp/codemcp/tools/: __init__.py  chmod.py  commit_and_push.py  edit_file.py  glob.py  grep.py  ls.py  mv.py  read_file.py  rm.py  write_file.py
tools/: code-mcp.py  copy.sh  docs-cli.md  docs-mcp.py  git-mcp.py  git-server.py  google-tasks-mcp.py  google-tasks-oauth-setup.py  poke-sprites.md  setup.sh
