[project]
name = "poke-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "ruff>=0.9.10",
    "toml>=0.10.2",
    "tomli>=2.1.1",
    "anyio>=3.7.0",
    "pyyaml>=6.0.0",
    "editorconfig>=0.17.0",
    "click>=8.1.8",
    "fastapi>=0.115.12",
    "uvicorn>=0.28.0",
    "starlette>=0.35.1",
    "pathspec>=0.12.1",
    "modal>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "expecttest>=0.1.4",
    "ruff>=0.1.5",
    "pyright>=1.1.350",
    "tomli_w>=1.0.0",
    "requests>=2.30.0",
]
